Update algorithms, languages, abstract and references

--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -44,7 +44,9 @@
    "id": "f6463f98",
    "metadata": {},
    "source": [
-    "In many cases and studies matrix multiplication is needed, that's why over time different methods have been created to solve the problems presented, with it, each method is specialized in a specific topical area. In this paper three methods will be analyzed, comparing their advantages and disadvantages and the time running different size matrices in three programming languages."
+    "In many cases and studies matrix multiplication is needed, that's why over time different methods have been created to solve the problems presented, with it, each method is specialized in a specific topical area. In this paper three methods will be analyzed, comparing their advantages and disadvantages and the time running different size matrices in three programming languages.\n",
+    "\n",
+    "**Keywords:** Matrices, matrix multiplication, sparse matrix, Naive, Strassens, Dictionary Of Keys Representation, recursion, dynamic programming, time complexity, space complexity."
    ]
   },
   {
@@ -113,6 +115,8 @@
     "\n",
     "While there are plenty of other algorithms that could arguably achieve a better performance than these, they were not selected because they were either theoretical algorithms, or too intricate to be analyzed in this paper.\n",
     "\n",
+    "The Naive algorithm was chosen because it is the base algorithm that defines matrix multiplication, so it was useful to know its efficiency and the changes made over time. The Strassens one was selected because it is the most common used, has many variations and it was important to compare the difference between efficiencies with respect to the Naive algorithm. And the Dictionary Of Keys Representation was chosen because it is useful for sparse matrices, so it was interesting to compare different types of solutions for different matrices.\n",
+    "\n",
     "In the following section a brief overview of each of the selected algorithms will be displayed."
    ]
   },
@@ -162,14 +166,14 @@
    "id": "foreign-cooling",
    "metadata": {},
    "source": [
-    "Strassen's algorithm provides an optimization over the naive method by applying various strategies commonly known as dynamic programming, divide and conquer, and recursion. It is important to note that simply using divide and conquer will not improve the performance of this algorithm over the naive method. It is the combination of all these methods which allows to reuse previously computed values.\n",
+    "Strassen's algorithm provides an optimization over the naive method by applying various strategies commonly known as dynamic programming, divide and conquer, and recursion. It is important to note that simply using divide and conquer will not improve the performance of this algorithm over the Naive method. It is the combination of all these methods which allows to reuse previously computed values.\n",
     "\n",
-    "Using a recursive diving and conquer approach where A, B and C are square matrices, and a, b, c, d, e, f, g, h are submatrices, requires eight recursive calls as shown below: \n",
+    "Using a recursive dividing and conquer approach where A, B and C are square matrices, and a, b, c, d, e, f, g, h are submatrices, requires eight recursive calls as shown below: \n",
     "\n",
     "<img src=\"assets/naive_divide_and_conquer.png\">\n",
-    "where $ae, bg, af, bh, ce, dg, cf, dh$ represent a recursive call. Each of this involving a submatrix multiplication\n",
+    "where $ae, bg, af, bh, ce, dg, cf, dh$ represent a recursive call. Each of this involving a submatrix multiplication.\n",
     "\n",
-    "On the other hand, strassens strives for seven recursion calls by applying the following scheme:\n",
+    "On the other hand, Strassens strives for seven recursion calls by applying the following scheme:\n",
     "\n",
     "<img src=\"assets/strassens_algorithm.png\">\n",
     "\n",
@@ -198,7 +202,7 @@
    "id": "driving-celtic",
    "metadata": {},
    "source": [
-    "Dictionary of keys representation allows an optimization of the naive method. It is especially useful for sparse matrices where the number of non-zero elements is relatively low when compared to number of total elements in the matrix.\n",
+    "Dictionary Of Keys Representation allows an optimization of the Naive method. It is especially useful for sparse matrices where the number of non-zero elements is relatively low when compared to number of total elements in the matrix.\n",
     "\n",
     "**Example Dictionary of Keys(DOK) representation:**\n",
     "<img src=\"./assets/sparse_matrix.png\">\n",
@@ -222,6 +226,8 @@
    "metadata": {},
    "source": [
     "For the purpose of avoiding biases, and having a more broad perspective, we've chosen to run all of these algorithms in three different programming languages: **C++, Python, and Julia**. This will allow us to make a more accurate analysis after all of the benchmarks have been recorded.\n",
+    "\n",
+    "These three languages were chosen because there is one compiled, one interpreted and one intermediate, so the purpose was to identify if there were any differences in efficiency between each algorithm if the language was changed.\n",
     "\n",
     "The implementations for each of these algorithms may be found in the folder named after the corresponding programming language in the root of this repository."
    ]
@@ -835,17 +841,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "featured-public",
+   "cell_type": "markdown",
+   "id": "f4b9748c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
     "    \n",
     "https://www.geeksforgeeks.org/strassens-matrix-multiplication/\n",
     "\n",
-    "https://www.baeldung.com/cs/matrix-multiplication-algorithms"
+    "https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
+    "    \n",
+    "https://bitsploit.blogspot.com/2017/07/optimizing-matrix-multiplication-using.html\n",
+    "    \n",
+    "https://andrew.gibiansky.com/blog/mathematics/matrix-multiplication/\n",
+    "    \n",
+    "https://rosettacode.org/wiki/Strassen%27s_algorithm\n",
+    "    \n",
+    "https://www.kkhaydarov.com/matrix-multiplication-algorithms/\n",
+    "    \n",
+    "https://martin-thoma.com/matrix-multiplication-python-java-cpp/\n",
+    "    \n",
+    "https://github.com/jaeho3690/Matrix_multiplication_python\n",
+    "    \n",
+    "https://medium.com/swlh/strassens-matrix-multiplication-algorithm-936f42c2b344"
    ]
   }
  ],
@@ -865,7 +883,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
