References, conclusions and tables, graphs and figures names

--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -137,6 +137,8 @@
     "\n",
     "**Pseudo Code:**<br/>\n",
     "<img align=\"center\" width=\"600px\" src=\"assets/naive_pseudocode.png\"/>\n",
+    "<h4 align=\"center\"> Figure 1: Naive method pseudo code </h4>\n",
+    "\n",
     "<br/>**Pros:**<br/>\n",
     "- Algorithm is easy to understand and implement.\n",
     "\n",
@@ -147,6 +149,7 @@
     "\n",
     "**Another visualization for this algorithm is the following:<br/>**\n",
     "<img align=\"center\" width=\"700px\" src=\"assets/matrix_multiplications.png\"/>\n",
+    "<h4 align=\"center\"> Figure 2: Matrix multiplication definition </h4>\n",
     "\n",
     "Where $c1 = a1*b1 + a2*b4 + a3*b7$.\n",
     "\n",
@@ -171,11 +174,14 @@
     "Using a recursive dividing and conquer approach where A, B and C are square matrices, and a, b, c, d, e, f, g, h are submatrices, requires eight recursive calls as shown below: \n",
     "\n",
     "<img src=\"assets/naive_divide_and_conquer.png\">\n",
+    "<h4 align=\"center\"> Figure 3: Matrix multiplication operations description </h4>\n",
+    "\n",
     "where $ae, bg, af, bh, ce, dg, cf, dh$ represent a recursive call. Each of this involving a submatrix multiplication.\n",
     "\n",
     "On the other hand, Strassens strives for seven recursion calls by applying the following scheme:\n",
     "\n",
     "<img src=\"assets/strassens_algorithm.png\">\n",
+    "<h4 align=\"center\"> Figure 4: Strassen's operations description </h4>\n",
     "\n",
     "where $p1$ to $p7$ represent a recursive call involving the opperations shown above.\n",
     "\n",
@@ -206,6 +212,7 @@
     "\n",
     "**Example Dictionary of Keys(DOK) representation:**\n",
     "<img src=\"./assets/sparse_matrix.png\">\n",
+    "<h4 align=\"center\"> Figure 5: Dictionary Of Keys Representation description </h4>\n",
     "\n",
     "\n",
     "Instead of iterating over every index of a matrix, it iterates over the indexes and values of the dictionary representatiom.\n",
@@ -264,6 +271,7 @@
     "| can_256.mtx | 256 | 2916 |\n",
     "| dwa512.mtx | 512 | 2480 |\n",
     "| delaunay_n10.mtx | 1024 | 6112 |\n",
+    "<h4 align=\"center\"> Table 1: Matrices description </h4>\n",
     "\n",
     "\n",
     "Matrix sizes ranging from $2^5$ to $2^{10}$ were chosen when selecting to matrices in order to observe how execution times increase when running our benchmarks. Bigger sizes were not selected as these problems quickly become slow to compute. Thus, it is unfeasible to process them because we established that each algorithm must be run multiple times for each matrix. Similarly, number of non-zero elements range from 98 to 6112. "
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "configured-marking",
    "metadata": {},
    "outputs": [
@@ -448,7 +456,7 @@
        "[225 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,6 +467,14 @@
     "dataframe = pd.read_csv(\"benchmarks.csv\")\n",
     "\n",
     "dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54e24081",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"left\"> Table 2: Dataframe of recorded times </h4>"
    ]
   },
   {
@@ -622,6 +638,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3741d35d",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"center\"> Graph 1: Matrix multiplication behavior in Python </h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "violent-oriental",
    "metadata": {},
    "source": [
@@ -657,6 +681,14 @@
    ],
    "source": [
     "plot_language(cpp_dfs) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bc742c9",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"center\"> Graph 2: Matrix multiplication behavior in CPP </h4>"
    ]
   },
   {
@@ -698,6 +730,14 @@
    ],
    "source": [
     "plot_language(julia_dfs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5e2d425",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"center\"> Graph 3: Matrix multiplication behavior in Julia </h4>"
    ]
   },
   {
@@ -783,6 +823,14 @@
     "    shadow=True, ncol=1\n",
     ")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c66425c1",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"center\"> Graph 4: Algorithmic complexity behavior </h4>"
    ]
   },
   {
@@ -933,6 +981,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7bf4fd4",
+   "metadata": {},
+   "source": [
+    "<h4 align=\"center\"> Graph 5: Comparison between Naive and Strassen's methods in CPP </h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "weekly-campus",
    "metadata": {},
    "source": [
@@ -952,12 +1008,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "twelve-state",
+   "cell_type": "markdown",
+   "id": "cd52940f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "As evidenced in the paper, each method is best performanced in different scenarios for matrix multiplication. While a Naive implementation may be better than Strassen's method for small matrices, it is expected to perform worse with big inputs. Regarding the Dictionary Of Keys Representation method, it is better for sparse matrices; although it surpassed the other two methods in the benchmarks, because it is just multiplying the indexes that are not ceros. It is expected to perform worse than the Naive algorithm if applied on non-sparse matrices.\n",
+    "\n",
+    "Also, it was evidenced that the Strassen's and the Dictionary Of Keys Representation methods were based on the Naive, but have changes that optimized them more, providing them more advantages in certain scenarios.\n",
+    "\n",
+    "As future work it would be interesting to compare more better designed algorithms with higher inputs, in order to have a more complete picture of their behavior and their efficiency."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -972,25 +1032,23 @@
    "id": "f4b9748c",
    "metadata": {},
    "source": [
-    "https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
-    "    \n",
-    "https://www.geeksforgeeks.org/strassens-matrix-multiplication/\n",
+    "Datta, S. (2020, October 21). Baeldung. Retrieved from https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
     "\n",
-    "https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
-    "    \n",
-    "https://bitsploit.blogspot.com/2017/07/optimizing-matrix-multiplication-using.html\n",
-    "    \n",
-    "https://andrew.gibiansky.com/blog/mathematics/matrix-multiplication/\n",
-    "    \n",
-    "https://rosettacode.org/wiki/Strassen%27s_algorithm\n",
-    "    \n",
-    "https://www.kkhaydarov.com/matrix-multiplication-algorithms/\n",
-    "    \n",
-    "https://martin-thoma.com/matrix-multiplication-python-java-cpp/\n",
-    "    \n",
-    "https://github.com/jaeho3690/Matrix_multiplication_python\n",
-    "    \n",
-    "https://medium.com/swlh/strassens-matrix-multiplication-algorithm-936f42c2b344"
+    "Dawda, P. (2020, March 30). Geeksforgeeks. Retrieved from https://www.geeksforgeeks.org/strassens-matrix-multiplication/\n",
+    "\n",
+    "Gibiansky, A. (2014, March 30). Andrew Gibiansky :: Math → [Code]. Retrieved from https://andrew.gibiansky.com/blog/mathematics/matrix-multiplication/\n",
+    "\n",
+    "KILICH. (2018, November 2). kkhaydarov. Retrieved from https://www.kkhaydarov.com/matrix-multiplication-algorithms/\n",
+    "\n",
+    "Kim, J. (2020, April 19). GitHub. Retrieved from https://github.com/jaeho3690/Matrix_multiplication_python/blob/master/strassen_base.py\n",
+    "\n",
+    "Mahato, S. (2020, August 17). Medium. Retrieved from https://medium.com/swlh/strassens-matrix-multiplication-algorithm-936f42c2b344\n",
+    "\n",
+    "Ranawaka, M. (2017). bitsploit. Retrieved from https://bitsploit.blogspot.com/2017/07/optimizing-matrix-multiplication-using.html\n",
+    "\n",
+    "rosettacode.org. (2021, February 18). Retrieved from https://rosettacode.org/wiki/Strassen%27s_algorithm\n",
+    "\n",
+    "Thoma, M. (2012, June 18). Martin Thoma. Retrieved from https://martin-thoma.com/matrix-multiplication-python-java-cpp/"
    ]
   }
  ],
